--- a/alleopskrifter.html
+++ b/alleopskrifter.html
@@ -27,6 +27,7 @@
        NAVIGATIONSBAR
        =========================== -->
   <!--Fixed navbar-->
+
   <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top px-md-4">
     <div class="container-fluid">
       <a class="navbar-brand logo" href="index.html"><img src="img/logo-vand-2.png" alt="logo lilleskål"></a>
@@ -71,7 +72,7 @@
   <!-- ===========================
        INTRO-SEKTION
        =========================== -->
-  <div class="custom-container">
+  <header class="custom-container">
     <!--Grid-række fra BS-->
     <div class="row align-items-start my-5">
       <!--Tekstfelt til venstre-->
@@ -90,7 +91,7 @@
         <img src="img/illustrationer/rodlog.png" alt="Rødløg illustration">
       </div>
     </div>
-  </div>
+  </header>
 
 
 
@@ -99,7 +100,7 @@
        =========================== -->
   <!--Orange baggrund-->
   <!--Skjules fra medium skærm (768px) og ned-->
-  <div id="alle-foraar" class="orange d-none d-md-block">
+  <section id="alle-foraar" class="orange d-none d-md-block">
     <div class="custom-container py-5 ">
       <div class="row align-items-start">
         <!--Overskrift m. link til forårssiden-->
@@ -107,65 +108,65 @@
           <h2>Forår</h2>
         </a>
         <!--Første opskrift-->
-        <div class="col text-center">
+        <article class="col text-center">
           <a href="foraar1.html"><img src="img/foraar/foraaropskrift1.png" alt="Lilleskåls forårsopskrift: Pasta med tomat, spidskål og ramsløgspesto"></a>
           <a href="foraar1.html">
             <h3>Pasta med tomat, spidskål og ramsløgspesto</h3>
           </a>
-        </div>
+        </article>
         <!--Anden opskrift-->
-        <div class="col text-center">
+        <article class="col text-center">
           <a href="foraar2.html"><img src="img/foraar/foraar2billede1.png" alt="Lilleskåls forårsopskrift: Forårs-orzo med tomater og citron"></a>
           <a href="foraar2.html">
             <h3>Forårs-orzo med tomater og citron</h3>
           </a>
-        </div>
+        </article>
         <!--Tredje opskrift-->
-        <div class="col text-center">
+        <article class="col text-center">
           <a href="foraar3.html"><img src="img/foraar/foraar3billede2.png" alt="Lilleskåls forårsopskrift: Forårsnudler med radiser, porre og sesam"></a>
           <a href="foraar3.html">
             <h3>Forårsnudler med radiser, porre og sesam</h3>
           </a>
-        </div>
+        </article>
       </div>
 
     </div>
-  </div>
+  </section>
 
 
   <!-- ===========================
        SOMMER-OPSKRIFTER
        =========================== -->
   <!--Skjules fra medium skærm (768px) og op-->
-  <div id="alle-sommer" class="custom-container d-none d-md-block">
+  <section id="alle-sommer" class="custom-container d-none d-md-block">
     <div class="row align-items-start py-5">
       <!--Overskrift m. link til sommersiden-->
       <a href="sommer.html">
         <h2>Sommer</h2>
       </a>
       <!--Første opskrift-->
-      <div class="col text-center">
+      <article class="col text-center">
         <a href="sommer1.html"><img src="img/sommer/sommer1billede1.png" alt="Lilleskåls sommeropskrift: Sommersalat med jordbær, burrata og nem focaccia"></a>
         <a href="sommer1.html">
           <h3>Sommersalat med jordbær, burrata og nem focaccia</h3>
         </a>
-      </div>
+      </article>
       <!--Anden opskrift-->
-      <div class="col text-center">
+      <article class="col text-center">
         <a href="sommer2.html"><img src="img/sommer1.png" alt="Lilleskåls sommeropskrift: Sommer-tacos med ærtemos og grillede grøntsager"></a>
         <a href="sommer2.html">
           <h3>Sommer-tacos med ærtemos og grillede grøntsager</h3>
         </a>
-      </div>
+      </article>
       <!--Tredje opskrft-->
-      <div class="col text-center">
+      <article class="col text-center">
         <a href="sommer3.html"><img src="img/sommer/sommer3billede1.png" alt="Lilleskåls sommeropskrift: Sommerpizza med sæsonens grønt og sprød bund"></a>
         <a href="sommer3.html">
           <h3>Sommerpizza med sæsonens grønt og sprød bund</h3>
         </a>
-      </div>
+      </article>
     </div>
-  </div>
+  </section>
 
 
 
@@ -174,7 +175,7 @@
        =========================== -->
   <!--Orange baggrund-->
   <!--Skjules fra medium skærm (768px) og ned-->
-  <div id="alle-efteraar" class="orange d-none d-md-block">
+  <section id="alle-efteraar" class="orange d-none d-md-block">
     <div class="custom-container py-5">
       <div class="row align-items-start">
         <!--Overskrift m. link til efterårssiden-->
@@ -182,29 +183,29 @@
           <h2>Efterår</h2>
         </a>
         <!--Første opskrift-->
-        <div class="col text-center">
+        <article class="col text-center">
           <a href="efteraar1.html"><img src="img/efteraar/efteraar1billede2.png" alt="Lilleskåls efterårsopskrift: Efterårssuppe med Hokkaido, gulerod og ingefær"></a>
           <a href="efteraar1.html">
             <h3>Efterårssuppe med Hokkaido, gulerod og ingefær</h3>
           </a>
-        </div>
+        </article>
         <!--Anden opskrift-->
-        <div class="col text-center">
+        <article class="col text-center">
           <a href="efteraar2.html"><img src="img/efteraar/efteraar2billede1.png" alt="Lilleskåls efterårsopskrift: Efterårs-gnocchi med tomat, salvie og karamelliseret løg"></a>
           <a href="efteraar2.html">
             <h3>Efterårs-gnocchi med tomat, salvie og karamelliseret løg</h3>
           </a>
-        </div>
+        </article>
         <!--Tredje opskrift-->
-        <div class="col text-center">
+        <article class="col text-center">
           <a href="efteraar3.html"><img src="img/efteraar/efteraarbillede.png" alt="Lilleskåls efterårsopskrift: Efterårspande med karamelliserede porrer og gulerødder"></a>
           <a href="efteraar3.html">
             <h3>Efterårspande med karamelliserede porrer og gulerødder</h3>
           </a>
-        </div>
+        </article>
       </div>
     </div>
-  </div>
+  </section>
 
 
 
@@ -212,31 +213,34 @@
        VINTER-OPSKRIFTER
        =========================== -->
   <!--Skjules fra medium skærm (768px) og ned-->
-  <div id="alle-vinter" class="custom-container d-none d-md-block">
+  <section id="alle-vinter" class="custom-container d-none d-md-block">
     <div class="row align-items-start my-5">
       <a href="vinter.html">
         <h2>Vinter</h2>
       </a>
-      <div class="col text-center">
+      <!--Første opskrift-->
+      <article class="col text-center">
         <a href="vinter1.html"><img src="img/vinter/vinter1.png" alt="Lilleskåls vintersopskrift: Vinter-nudler med porre, kål og cremet sesamsauce"></a>
         <a href="vinter1.html">
           <h3>Vinter-nudler med porre, kål og cremet sesamsauce</h3>
         </a>
-      </div>
-      <div class="col text-center">
+      </article>
+      <!--Anden opskrift-->
+      <article class="col text-center">
         <a href="vinter2.html"><img src="img/vinter/vinter2billede2.png" alt="Lilleskåls vintersopskrift: Vinter-pasta med grønkålssauce og citron"></a>
         <a href="vinter2.html">
           <h3>Vinterpasta med grønkålssauce og citron</h3>
         </a>
-      </div>
-      <div class="col text-center">
+      </article>
+      <!--Tredje opskrift-->
+      <article class="col text-center">
         <a href="vinter3.html"><img src="img/vinter/vinter3billede1.png" alt="Lilleskåls vintersopskrift: Vinterpande med grønkål, svampe og flødestuvet perlebyg"></a>
         <a href="vinter3.html">
           <h3>Vinterpande med grønkål, svampe og flødestuvet perlebyg</h3>
         </a>
-      </div>
+      </article>
     </div>
-  </div>
+  </section>
 
 
   <!-- ===========================
@@ -248,33 +252,33 @@
 
       <!-- Forår -->
       <!--Kolonne: 12 / fylder hele siden-->
-      <div class="alle-foraar col-12 custom-container orange py-4">
+      <section class="alle-foraar col-12 custom-container orange py-4">
         <div id="carousel-foraar" class="carousel slide" data-bs-touch="false">
           <div class="carousel-inner">
             <a href="foraar.html">
               <h2 class="px-3">Forår</h2>
             </a>
             <!-- Aktiv: bliver vist som første opskrift-->
-            <div class="carousel-item active text-center">
+            <article class="carousel-item active text-center">
               <a href="foraar1.html">
                 <img src="img/foraar/foraaropskrift1.png" class="d-block w-100" alt="Forår opskrift 1">
                 <h3>Pasta med tomat, spidskål og ramsløgspesto</h3>
               </a>
-            </div>
+            </article>
             <!-- Næste opskrift i karussel -->
-            <div class="carousel-item text-center">
+            <article class="carousel-item text-center">
               <a href="foraar2.html">
                 <img src="img/foraar/foraar2billede1.png" class="d-block w-100" alt="Forår opskrift 2">
                 <h3>Forårs-orzo med tomater og citron</h3>
               </a>
-            </div>
+            </article>
             <!-- Næste opskrift i karussel -->
-            <div class="carousel-item text-center">
+            <article class="carousel-item text-center">
               <a href="foraar3.html">
                 <img src="img/foraar/foraar3billede2.png" class="d-block w-100" alt="Forår opskrift 3">
                 <h3>Forårsnudler med radiser, porre og sesam</h3>
               </a>
-            </div>
+            </article>
           </div>
           <button class="carousel-control-prev" data-bs-target="#carousel-foraar" data-bs-slide="prev">
             <span class="carousel-control-prev-icon"></span>
@@ -283,37 +287,37 @@
             <span class="carousel-control-next-icon"></span>
           </button>
         </div>
-      </div>
+      </section>
 
       <!-- Sommer -->
       <!--Kolonne: 12 / fylder hele siden-->
-      <div class="alle-sommer col-12 py-4 custom-container">
+      <section class="alle-sommer col-12 py-4 custom-container">
         <div id="carousel-sommer" class="carousel slide" data-bs-touch="false">
           <a href="sommer.html">
             <h2 class="px-3">Sommer</h2>
           </a>
           <div class="carousel-inner">
             <!-- Aktiv: bliver vist som første opskrift-->
-            <div class="carousel-item active text-center">
+            <article class="carousel-item active text-center">
               <a href="sommer1.html">
                 <img src="img/sommer/sommer1billede1.png" class="d-block w-100" alt="Sommer opskrift 1">
                 <h3>Sommersalat med jordbær, burrata og nem focaccia</h3>
               </a>
-            </div>
+            </article>
             <!-- Næste opskrift i karussel -->
-            <div class="carousel-item text-center">
+            <article class="carousel-item text-center">
               <a href="sommer2.html">
                 <img src="img/sommer1.png" class="d-block w-100" alt="Sommer opskrift 2">
                 <h3>OSommer-tacos med ærtemos og grillede grøntsager</h3>
               </a>
-            </div>
+            </article>
             <!-- Næste opskrift i karussel -->
-            <div class="carousel-item text-center">
+            <article class="carousel-item text-center">
               <a href="sommer3.html">
                 <img src="img/sommer/sommer3billede1.png" class="d-block w-100" alt="Sommer opskrift 3">
                 <h3>Sommerpizza med sæsonens grønt og sprød bund</h3>
               </a>
-            </div>
+            </article>
           </div>
           <button class="carousel-control-prev" data-bs-target="#carousel-sommer" data-bs-slide="prev">
             <span class="carousel-control-prev-icon"></span>
@@ -322,37 +326,37 @@
             <span class="carousel-control-next-icon"></span>
           </button>
         </div>
-      </div>
+      </section>
 
       <!-- Efterår -->
       <!--Kolonne: 12 / fylder hele siden-->
-      <div class="alle-efteraar col-12 py-4 custom-container orange">
+      <section class="alle-efteraar col-12 py-4 custom-container orange">
         <div id="carousel-efteraar" class="carousel slide" data-bs-touch="false">
           <a href="efteraar.html">
             <h2 class="px-3">Efterår</h2>
           </a>
           <div class="carousel-inner">
             <!-- Aktiv: bliver vist som første opskrift-->
-            <div class="carousel-item active text-center">
+            <article class="carousel-item active text-center">
               <a href="efteraar1.html">
                 <img src="img/efteraar/efteraar1billede2.png" class="d-block w-100" alt="Efterår opskrift 1">
                 <h3>Efterårssuppe med Hokkaido, gulerod og ingefær</h3>
               </a>
-            </div>
+            </article>
             <!-- Næste opskrift i karussel -->
-            <div class="carousel-item text-center">
+            <article class="carousel-item text-center">
               <a href="efteraar2.html">
                 <img src="img/efteraar/efteraar1billede2.png" class="d-block w-100" alt="Efterår opskrift 2">
                 <h3>Efterårs-gnocchi med tomat, salvie og karamelliseret løg</h3>
               </a>
-            </div>
+            </article>
             <!-- Næste opskrift i karussel -->
-            <div class="carousel-item text-center">
+            <article class="carousel-item text-center">
               <a href="efteraar3.html">
                 <img src="img/efteraar/efteraar1billede2.png" class="d-block w-100" alt="Efterår opskrift 3">
                 <h3>Efterårspande med karamelliserede porrer og gulerødder</h3>
               </a>
-            </div>
+            </article>
           </div>
           <button class="carousel-control-prev" data-bs-target="#carousel-efteraar" data-bs-slide="prev">
             <span class="carousel-control-prev-icon"></span>
@@ -361,37 +365,37 @@
             <span class="carousel-control-next-icon"></span>
           </button>
         </div>
-      </div>
+      </section>
 
       <!-- Vinter -->
       <!--Kolonne: 12 / fylder hele siden-->
-      <div class="alle-vinter col-12 py-4 custom-container">
+      <section class="alle-vinter col-12 py-4 custom-container">
         <div id="carousel-vinter" class="carousel slide" data-bs-touch="false">
           <a href="vinter.html">
             <h2 class="px-3">Vinter</h2>
           </a>
           <div class="carousel-inner">
             <!-- Aktiv: bliver vist som første opskrift-->
-            <div class="carousel-item active text-center">
+            <article class="carousel-item active text-center">
               <a href="vinter1.html">
                 <img src="img/vinter/vinter1.png" class="d-block w-100" alt="Vinter opskrift 1">
                 <h3>Vinter-nudler med porre, kål og cremet sesamsauce</h3>
               </a>
-            </div>
+            </article>
             <!-- Næste opskrift i karussel -->
-            <div class="carousel-item text-center">
+            <article class="carousel-item text-center">
               <a href="vinter2.html">
                 <img src="img/vinter/vinter2billede2.png" class="d-block w-100" alt="Vinter opskrift 2">
                 <h3>Vinterpasta med grønkålssauce og citron</h3>
               </a>
-            </div>
+            </article>
             <!-- Næste opskrift i karussel -->
-            <div class="carousel-item text-center">
+            <article class="carousel-item text-center">
               <a href="vinter3.html">
                 <img src="img/vinter/vinter3billede1.png" class="d-block w-100" alt="Vinter opskrift 3">
                 <h3>Vinterpande med grønkål, svampe og flødestuvet perlebyg</h3>
               </a>
-            </div>
+            </article>
           </div>
           <button class="carousel-control-prev" data-bs-target="#carousel-vinter" data-bs-slide="prev">
             <span class="carousel-control-prev-icon"></span>
@@ -400,7 +404,7 @@
             <span class="carousel-control-next-icon"></span>
           </button>
         </div>
-      </div>
+      </section>
 
     </div>
   </main>
