--- a/efteraar3.html
+++ b/efteraar3.html
@@ -74,6 +74,7 @@
        =========================== -->
   <!--ØVERSTE BILLEDE AF RET-->
   <!--To forskellige billeder ud fra om det er mobil eller tablet/desktop -->
+<header>
   <div class="hero-sektion position-relative">
     <picture>
       <source media="(min-width: 768px)" srcset="img/efteraar/heroefteraarstor1.png">
@@ -87,7 +88,8 @@
   <!-- ===========================
        INTRO-SEKTION
        =========================== -->
-  <div class="custom-container">
+  <section class="custom-container">
+    <button class="knap-aarstider"><a href="alleopskrifter.html">Tilbage</a></button>
     <div class="row align-items-start my-5">
       <!--Tekstfelt m. introduktion til venstre-->
       <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
@@ -103,8 +105,8 @@
         <img src="img/illustrationer/lys.png" alt="Lys illustration">
       </div>
     </div>
-  </div>
-
+  </section>
+</header>
 
 
   <!-- ===========================
@@ -262,7 +264,7 @@
        <!--
       På små skærme (mobil): vis indholdet under hinanden (flex-column)
       Fra små skærme (576px) og op: vis dem ved siden af hinanden (flex-sm-row)-->  
-  <div class="comment-section custom-container d-flex flex-column flex-md-row  my-5">
+  <section class="comment-section custom-container d-flex flex-column flex-md-row  my-5">
     <div class="comment-form">
       <h2>Har du spørgsmål til opskriften?</h2>
       <p>Har du et spørgsmål til opskriften eller lyst til at sende en hilsen med et tip, så kan du skrive til os i
@@ -276,7 +278,7 @@
       <h2>Kommentarer</h2>
       <div id="commentsContainer"></div>
     </div>
-  </div>
+  </section>
 
 
   <!-- ===========================
