--- a/faellesskaal.html
+++ b/faellesskaal.html
@@ -93,8 +93,8 @@
   <!-- ===========================
        FÆLLESSKAB TEKST M. BILLEDE AF AT DER BLIVER SKÅLET TIL HØJRE
        =========================== -->
-  <div class="custom-container">
-    <div class="row align-items-start mt-5">
+  <section class="custom-container">
+    <section class="row align-items-start mt-5">
       <!-- Kolonne: 12 på mobil, 6 på store skærme (≥992px)-->
       <!--Rækkefølge: 2 på mobil, 1 på store skærme-->
       <div class="col-12 col-lg-6 order-2 order-lg-1">
@@ -117,8 +117,8 @@
       <div class="col-12 col-lg-6 order-1 order-lg-2">
         <img src="img/stemning/digital4.png" alt="Lilleskåls to kokke handler varer">
       </div>
-    </div>
-  </div>
+    </section>
+  </section>
 
 
 
@@ -129,8 +129,8 @@
   <!-- ===========================
        LAD OS SKABE MINDER SAMMEN TEKST M. BILLEDE LÆRKE & AMALIE TIL VENSTRE
        =========================== -->
-  <div class="custom-container py-5">
-    <div class=" row align-items-start ">
+  <section class="custom-container py-5">
+    <section class=" row align-items-start ">
       <!-- Kolonne: 12 på mobil, 6 på store skærme (≥992px) -->
       <div class="col-12 col-lg-6">
         <img src="img/stemning/peberogpasta.png" alt="Kvinde spiser spaghetti og anden Kvinde kværner peber">
@@ -147,19 +147,19 @@
           kommer alene eller tager en ven med, er der plads til dig ved vores fælles bord.
         </p>
       </div>
-    </div>
-  </div>
+    </section>
+  </section>
 
 
   <!-- ===========================
        E-MAGASIN TILMELDING
        =========================== -->
-  <div class="orange">
+  <section class="orange">
     <div class="custom-container py-5">
       <!-- Gutter: 3 på mellemstore skærme (≥768px), 5 på store skærme (≥992px)-->
       <div class="row g-md-3 g-lg-5">
         <!-- Kolonne: 12 på mobil, 6 på mellemstore skærme (≥768px)-->
-        <div class="col-12 col-md-6 tilmelding-boks-faellesskaal">
+        <article class="col-12 col-md-6 tilmelding-boks-faellesskaal">
           <h2>Bliv inspireret i din indbakke</h2>
           <p>Madglæde stopper ikke ved køkkenbordet - den lever også videre online.
             Vores digitale fællesskab er til dig, der elsker at nørde med budgetvenlig mad, finde nye idéer med sæsonens
@@ -177,10 +177,10 @@
             <input type="email" name="email" required>
             <input type="submit" value="Send">
           </form>
-        </div>
+        </article>
 
         <!--E-magasin fra Indesign / Sneak-peek-->
-        <div class="col-12 col-md-6">
+        <aside class="col-12 col-md-6">
           <div class="container">
             <div class="embed-responsive embed-responsive-16by9">
               <iframe class="embed-responsive-item"
@@ -189,11 +189,11 @@
               </iframe>
             </div>
           </div>
-        </div>
+        </aside>
       </div>
 
     </div>
-  </div>
+  </section>
 
 
 
@@ -201,7 +201,7 @@
   <!-- ===========================
        ANMELDELSE FRA BRUGERE / FÆLLESSKAB-FØLELSEN
        =========================== -->
-  <div class="custom-container my-5">
+  <section class="custom-container my-5">
     <!-- Gutter: 3 på mellemstore skærme (≥768px), 5 på store skærme (≥992px) -->
     <div class="row g-md-3 g-lg-5">
       <!--Carousel-->
@@ -256,7 +256,7 @@
        DEL GLÆDEN ONLLINE - TEKST
        =========================== -->
       <!-- Kolonne: 12 på mobil, 6 på mellemstore skærme (≥768px) -->
-      <div class="col-md-6 col-12 pt-5">
+      <section class="col-md-6 col-12 pt-5">
         <h2>Del glæden online</h2>
         <p>Bliv en del af vores madunivers - direkte fra indbakken.
           Et par gange om måneden sender vi vores e-magasin fyldt med sæsonbaserede opskrifter, ideer til budgetvenlig
@@ -269,11 +269,11 @@
           Tilmeld dig vores e-magasin og få et fast dryp af madinspiration, fællesskab og stemning - lige der, hvor du
           er.
         </p>
-      </div>
+      </section>
 
 
     </div>
-  </div>
+  </section>
 
 
 
