--- a/efteraar.html
+++ b/efteraar.html
@@ -71,7 +71,8 @@
   <!-- ===========================
        INTRO-SEKTION
        =========================== -->
-  <div class="custom-container">
+  <header class="custom-container">
+    <button class="knap-aarstider"><a href="alleopskrifter.html">Tilbage</a></button>
     <div class="row align-items-start my-5">
       <!--Tekstfelt til venstre-->
       <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
@@ -89,14 +90,14 @@
         <img src="img/illustrationer/gulerod.png" alt="Gulerod illustration">
       </div>
     </div>
-  </div>
+  </header>
 
   <!-- ===========================
        3 OPSKRIFTER
        =========================== -->
   <!--Introduktion til de 3 opskrifter-->
   <!--Orange baggrund-->
-  <div class="orange">
+  <section class="orange">
     <div class="custom-container py-5">
       <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
       <div class="col-12 col-md-6 py-4">
@@ -110,31 +111,31 @@
       <div class="alle-efteraar row align-items-start px-sm-5 text-center">
       <!--Opskrift 1-->
       <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
-        <div class="col-12 col-sm-4 py-3">
+        <article class="col-12 col-sm-4 py-3">
           <a href="efteraar1.html"><img src="img/efteraar/efteraar1billede2.png" alt="Lilleskåls efterårsopskrift"></a>
           <a href="efteraar1.html">
             <h3>Efterårssuppe med Hokkaido, gulerod og ingefær</h3>
           </a>
-        </div>
+        </article>
       <!--Opskrift 2-->
       <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
-        <div class="col-12 col-sm-4 py-3">
+        <article class="col-12 col-sm-4 py-3">
           <a href="efteraar2.html"><img src="img/efteraar/efteraar2billede1.png" alt="Lilleskåls efterårsopskrift"></a>
           <a href="efteraar2.html">
             <h3>Efterårs-gnocchi med tomat, salvie og karamelliseret løg</h3>
           </a>
-        </div>
+        </article>
       <!--Opskrift 3-->
       <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
-        <div class="col-12 col-sm-4 py-3">
+        <article class="col-12 col-sm-4 py-3">
           <a href="efteraar3.html"><img src="img/efteraar/efteraarbillede.png" alt="Lilleskåls efterårsopskrift"></a>
           <a href="efteraar3.html">
             <h3>Efterårspande med karamelliserede porrer og gulerødder</h3>
           </a>
-        </div>
+        </article>
       </div>
     </div>
-  </div>
+  </section>
 
 
 
