--- a/foraar.html
+++ b/foraar.html
@@ -71,7 +71,8 @@
   <!-- ===========================
        INTRO-SEKTION
        =========================== -->
-  <div class="custom-container">
+  <header class="custom-container">
+    <button class="knap-aarstider"><a href="alleopskrifter.html">Tilbage</a></button>
     <div class="row align-items-start my-5 ">
       <!--Tekstfelt til venstre-->
       <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
@@ -89,14 +90,14 @@
         <img src="img/illustrationer/basilikum.png" alt="Basilikum illustration">
       </div>
     </div>
-  </div>
+  </header>
 
   <!-- ===========================
        3 OPSKRIFTER
        =========================== -->
   <!--Introduktion til de 3 opskrifter-->
   <!--Orange baggrund-->
-  <div class="orange">
+  <section class="orange">
     <div class="custom-container alle-foraar">
       <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
       <div class="col-12 py-4 col-lg-6">
@@ -109,31 +110,31 @@
       <div class="row align-items-start text-center">
       <!--Opskrift 1-->
       <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
-        <div class="col-12 col-sm-4 py-3 text-center">
+        <article class="col-12 col-sm-4 py-3 text-center">
           <a href="foraar1.html"><img src="img/foraar/foraaropskrift1.png" alt="Lilleskåls forårsopskrift: Pasta med tomat, spidskål og ramsløgspesto"></a>
           <a href="foraar1.html">
             <h3>Pasta med tomat, spidskål og ramsløgspesto</h3>
           </a>
-        </div>
+        </article>
       <!--Opskrift 2-->
       <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
-        <div class="col-12 col-sm-4 py-3 text-center">
+        <article class="col-12 col-sm-4 py-3 text-center">
           <a href="foraar2.html"><img src="img/foraar/foraar2billede1.png" alt="Lilleskåls forårsopskrift: Forårs-orzo med tomater og citron"></a>
           <a href="foraar2.html">
             <h3>Forårs-orzo med tomater og citron</h3>
           </a>
-        </div>
+        </article>
       <!--Opskrift 3-->
       <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
-        <div class="col-12 col-sm-4 py-3 text-center">
+        <article class="col-12 col-sm-4 py-3 text-center">
           <a href="foraar3.html"><img src="img/foraar/foraar3billede2.png" alt="Lilleskåls forårsopskrift: Forårsnudler med radiser, porre og sesam"></a>
           <a href="foraar3.html">
             <h3>Forårsnudler med radiser, porre og sesam</h3>
           </a>
-        </div>
+        </article>
       </div>
     </div>
-  </div>
+  </section>
 
 
   <!-- ===========================
