--- a/kontakt.html
+++ b/kontakt.html
@@ -72,7 +72,7 @@
        BAGGRUND SOM ER ET PAPIR
        =========================== -->
 
-<div class="custom-container py-5">
+<main class="custom-container py-5">
   <div class="row position-relative align-items-start">
      <!-- Kolonne: 12 på mobil, 8 på medium skærme (≥768px) og op -->
     <div class="col-12 col-md-8">
@@ -86,7 +86,7 @@
   <!-- ===========================
         TEKST OVENPÅ PAPIR
        =========================== -->
-    <div class="position-absolute top-0 start-0 p-5">
+    <section class="position-absolute top-0 start-0 p-5">
       <div>
         <h1 class="overskrift-kontakt">Kontakt os:</h1>
         <div class="row">
@@ -106,15 +106,15 @@
         </p> 
       </div>
       
-      <div class="instagram">
+      <aside class="instagram">
         <p> 
           <a href="https://www.instagram.com/lille_skaal/" target="_blank">
             <i class="bi bi-instagram fs-4"></i>
           </a>
           Oplev mere af vores univers her
         </p>
-      </div>
-    </div>
+      </aside>
+    </section>
     </div>
 
     <div class="col-12 col-md-4 pt-3">
@@ -122,7 +122,7 @@
       <img src="img/faellesskaal.png" alt="Skålende vinglas" class="kontakt-billede img-fluid">
     </div>
   </div>
-</div>
+</main>
 
 
 
@@ -130,11 +130,11 @@
   <!-- ===========================
        LOGO I BUNDEN
        =========================== -->
-<div class="orange py-5">
+<footer class="orange py-5">
     <div class="logo-hero d-flex justify-content-center">
         <img src="img/logovandmaling.png" alt="lilleskål logo">
     </div>
-</div>
+</footer>
 
 
 
