--- a/omos.html
+++ b/omos.html
@@ -71,11 +71,11 @@
   <!-- ===========================
        FØRSTE DEL M. AMALIE & LÆRKE - DET STARTER I KØKKENET
        =========================== -->
-  <div class="custom-container my-5">
+  <header class="custom-container my-5">
     <h1>Om Os</h1>
-  </div>
+  </header>
 
-  <div class="custom-container">
+  <section class="custom-container">
     <div class="row align-items-start my-1">
       <!-- Kolonne: 12 på mobil, 6 på medium skærme (≥768px) og op -->
       <div class="col-12 col-md-6">
@@ -97,13 +97,13 @@
         <img class="madlavning d-none d-lg-block" src="img/omos/amalieoglaerkekoekkenet.png" alt="To kokke laver mad">
       </div>
     </div>
-  </div>
+  </section>
 
 
   <!-- ===========================
        ANDEN DEL M. KATRINE & MARIE - ...OG SAMLER SIG I ET FÆLLES MADUNIVERS
        =========================== -->
-  <div class="custom-container my-2">
+  <section class="custom-container my-2">
     <div class="row align-items-start">
       <!-- Kolonne: 12 på mobil, 6 på medium skærme (≥768px) og op -->
        <!--Rækkefølge: 2 på mobil, 2 på medium skærme og op-->
@@ -125,13 +125,13 @@
         <img class="teknik" src="img/omos/teknik1.png" alt="To teknikkere bag Lilleskål">
       </div>
     </div>
-  </div>
+  </section>
 
 
     <!-- ===========================
        BILLEDECOLLAGE AF STRAND OG LÆRKE M. HUND
        =========================== -->
-  <div class="custom-container text-center">
+  <aside class="custom-container text-center">
     <div class="row align-items-start">
       <!-- Kolonne: 6 på mobil, 5 på medium skærme (≥768px) og op-->
       <!--Offset: 1 kol på medium skærme og op-->
@@ -144,19 +144,19 @@
         <img class="hugo" src="img/omos/hugooglaerke.png" alt="Lilleskåls ene kok og hendes hund">
       </div>
     </div>
-  </div>
+  </aside>
 
  <!-- ===========================
        FÆLLESSKAB-AFSNIT M. BORD - LINKER TIL FÆLLES-SKÅL SIDEN 
        =========================== -->
-  <div class="orange position-relative faelles-bord">
+  <section class="orange position-relative faelles-bord">
     <a class="falles-link" href="faellesskaal.html">
       <picture class="d-flex justify-content-center">
         <source media="(min-width: 768px)" srcset="img/deskfaellesskaal.png">
         <img src="img/mobilfaellesskaal.png" alt="To vinglas skåler illustration">
       </picture>
     </a>
-  </div>
+  </section>
 
 
 
