--- a/efteraar2.html
+++ b/efteraar2.html
@@ -86,7 +86,7 @@
        INTRO-SEKTION
        =========================== -->
     <section class="custom-container">
-      <button class="knap-aarstider"><a href="alleopskrifter.html">Tilbage</a></button>
+      <button class="knap-aarstider"><a href="efteraar.html">Tilbage</a></button>
       <div class="row align-items-start my-5">
         <!--Tekstfelt m. introduktion til venstre-->
         <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
@@ -256,26 +256,26 @@
     </section>
 
 
-    <!-- ===========================
+  <!-- ===========================
        KOMMENTARSPOR
        =========================== -->
-       <!--
+  <!--
       På små skærme (mobil): vis indholdet under hinanden (flex-column)
       Fra små skærme (576px) og op: vis dem ved siden af hinanden (flex-sm-row)-->
-      <section class="comment-section custom-container d-flex flex-column flex-md-row my-5">
-        <div class="comment-form">
+      <section class="comment-section custom-container d-flex flex-column flex-md-row  my-5">
+        <form class="comment-form">
           <h2>Har du spørgsmål til opskriften?</h2>
           <p>Har du et spørgsmål til opskriften eller lyst til at sende en hilsen med et tip, så kan du skrive til os i
             kommentarfeltet herunder.</p>
           <input type="text" id="nameInput" placeholder="Dit navn" />
           <textarea id="commentInput" placeholder="Din kommentar"></textarea>
           <button onclick="addComment()">Send</button>
-        </div>
+        </form>
     
-        <div class="comment-list">
+        <aside class="comment-list">
           <h2>Kommentarer</h2>
           <div id="commentsContainer"></div>
-        </div>
+        </aside>
       </section>
 
 
