--- a/foraar3.html
+++ b/foraar3.html
@@ -74,6 +74,7 @@
        =========================== -->
   <!--ØVERSTE BILLEDE AF RET-->
   <!--To forskellige billeder ud fra om det er mobil eller tablet/desktop -->
+<header>
   <div class="hero-sektion position-relative">
     <picture>
       <source media="(min-width: 768px)" srcset="img/foraar/heroforaarstor3.png">
@@ -86,7 +87,8 @@
   <!-- ===========================
        INTRO-SEKTION
        =========================== -->
-  <div class="custom-container">
+  <section class="custom-container">
+    <button class="knap-aarstider"><a href="foraar.html">Tilbage</a></button>
     <div class="row align-items-start my-5">
       <!--Tekstfelt m. introduktion til venstre-->
       <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
@@ -102,7 +104,8 @@
         <img src="img/illustrationer/porre.png" alt="Porre illustration">
       </div>
     </div>
-  </div>
+  </section>
+</header>
 
 
   <!-- ===========================
@@ -239,21 +242,21 @@
   <!--
       På små skærme (mobil): vis indholdet under hinanden (flex-column)
       Fra små skærme (576px) og op: vis dem ved siden af hinanden (flex-sm-row)-->
-  <div class="comment-section custom-container d-flex flex-column flex-md-row  my-5">
-    <div class="comment-form">
-      <h2>Har du spørgsmål til opskriften?</h2>
-      <p>Har du et spørgsmål til opskriften eller lyst til at sende en hilsen med et tip, så kan du skrive til os i
-        kommentarfeltet herunder.</p>
-      <input type="text" id="nameInput" placeholder="Dit navn" />
-      <textarea id="commentInput" placeholder="Din kommentar"></textarea>
-      <button onclick="addComment()">Send</button>
-    </div>
-
-    <div class="comment-list">
-      <h2>Kommentarer</h2>
-      <div id="commentsContainer"></div>
-    </div>
-  </div>
+      <section class="comment-section custom-container d-flex flex-column flex-md-row  my-5">
+        <form class="comment-form">
+          <h2>Har du spørgsmål til opskriften?</h2>
+          <p>Har du et spørgsmål til opskriften eller lyst til at sende en hilsen med et tip, så kan du skrive til os i
+            kommentarfeltet herunder.</p>
+          <input type="text" id="nameInput" placeholder="Dit navn" />
+          <textarea id="commentInput" placeholder="Din kommentar"></textarea>
+          <button onclick="addComment()">Send</button>
+        </form>
+    
+        <aside class="comment-list">
+          <h2>Kommentarer</h2>
+          <div id="commentsContainer"></div>
+        </aside>
+      </section>
 
 
   <!-- ===========================
