--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
        HERO-SEKTION
        =========================== -->
   <!--To forskellige billeder ud fra om det er mobil eller tablet/desktop -->
-  <div class="hero-sektion position-relative">
+  <header class="hero-sektion position-relative">
     <picture>
       <source media="(min-width: 768px)" srcset="img/forsidebillede.png">
       <img src="img/forsidemobil.png" alt="Lilleskåls køkken med de 2 kokke der laver mad og drikker vin">
@@ -93,7 +93,7 @@
           </picture>
         </a></h4>
     </div>
-  </div>
+  </header>
 
   <!--UPS!!!!!!!!! der kommer fejlkode ved linje 88:  Empty heading.
 
@@ -105,7 +105,7 @@ From line 88, column 7; to line 88, column 33
   <!-- ===========================
        INTRO-SEKTION
        =========================== -->
-  <div class="custom-container">
+  <section class="custom-container">
     <div class="row align-items-start my-5">
       <!--Tekstfelt m. introduktion til side-->
       <!-- Kolonne: 12 på mobil, 6 på små skærme (≥576px) og op -->
@@ -120,7 +120,7 @@ From line 88, column 7; to line 88, column 33
         <img src="img/illustrationer/basilikum.png" alt="Basilikum illustration">
       </div>
     </div>
-  </div>
+  </section>
 
 
   <!-- ===========================
@@ -128,13 +128,12 @@ From line 88, column 7; to line 88, column 33
        =========================== -->
 
   <!--Oversigt over alle sæsoner, som kan komme på forsiden. UPS der bliver kun vist den nuværende sæson, som man er i-->
-  <div class="orange py-5">
+  <section class="orange py-5">
     <div class="custom-container">
       <!-- Sommer -->
-      <div id="summer" class="season-container row d-none">
+      <section id="summer" class="season-container row d-none">
         <!-- Kolonne: 12 på mobil, 6 på mellemstore skærme (≥768px) og op -->
         <div class="col-12 col-md-6">
-
           <!--Tekst om sæson-->
           <h2>Velkommen til sommeren!</h2>
           <p>
@@ -153,10 +152,10 @@ From line 88, column 7; to line 88, column 33
           <!--Billede af sæson som link-->
           <a href="sommer.html"><img src="img/sommer/sommer2billede2.png" alt="Sommer" class="img-fluid rounded" /></a>
         </div>
-      </div>
+      </section>
 
       <!-- Forår -->
-      <div id="spring" class=" season-container row d-none">
+      <section id="spring" class=" season-container row d-none">
         <!-- Kolonne: 12 på mobil, 6 på mellemstore skærme (≥768px) og op -->
         <div class="col-12 col-md-6">
 
@@ -179,10 +178,10 @@ From line 88, column 7; to line 88, column 33
           <!--Billede af sæson som link-->
           <a href="foraar.html"><img src="img/foraar/foraar1billede2.png" alt="Forår" class="img-fluid rounded" /></a>
         </div>
-      </div>
+      </section>
 
       <!-- Efterår -->
-      <div id="autumn" class="season-container row d-none">
+      <section id="autumn" class="season-container row d-none">
         <!-- Kolonne: 12 på mobil, 6 på mellemstore skærme (≥768px) og op -->
         <div class="col-12 col-md-6">
 
@@ -203,10 +202,10 @@ From line 88, column 7; to line 88, column 33
           <a href="efteraar.html"><img src="img/efteraar/efteraar2billede1ny.png" alt="Efterår"
               class="img-fluid rounded" /></a>
         </div>
-      </div>
+      </section>
 
       <!-- Vinter -->
-      <div id="winter" class="season-container d-none">
+      <section id="winter" class="season-container d-none">
         <!-- Kolonne: 12 på mobil, 6 på mellemstore skærme (≥768px) og op -->
         <div class="col-12 col-md-6">
 
@@ -229,10 +228,10 @@ From line 88, column 7; to line 88, column 33
           <!--Billede af sæson som link-->
           <a href="vinter.html"><img src="img/vinter/vinter1billede1.png" alt="Vinter" class="img-fluid rounded" /></a>
         </div>
-      </div>
+      </section>
     </div>
 
-  </div>
+  </section>
 
 
   <!-- ===========================
@@ -276,14 +275,14 @@ From line 88, column 7; to line 88, column 33
   <!-- ===========================
        FÆLLESSKAB-AFSNIT M. BORD - LINKER TIL FÆLLES-SKÅL SIDEN 
        =========================== -->
-  <div class="orange position-relative faelles-bord">
+  <section class="orange position-relative faelles-bord">
     <a class="falles-link" href="faellesskaal.html">
       <picture class="d-flex justify-content-center">
         <source media="(min-width: 768px)" srcset="img/deskfaellesskaal.png">
         <img src="img/mobilfaellesskaal.png" alt="Vinglas skåler illustration">
       </picture>
     </a>
-  </div>
+  </section>
 
 
 
