--- a/sommer.html
+++ b/sommer.html
@@ -71,7 +71,8 @@
   <!-- ===========================
        INTRO-SEKTION
        =========================== -->
-  <div class="custom-container">
+    <header class="custom-container">
+      <button class="knap-aarstider"><a href="alleopskrifter.html">Tilbage</a></button>
     <div class="row align-items-start my-5">
       <!--Tekstfelt til venstre-->
       <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
@@ -90,7 +91,7 @@
         <img src="img/illustrationer/jordbaer.png" alt="Jordbær illustration">
       </div>
     </div>
-  </div>
+  </header>
 
 
   <!-- ===========================
@@ -98,7 +99,7 @@
        =========================== -->
   <!--Introduktion til de 3 opskrifter-->
   <!--Orange baggrund-->
-  <div class="orange">
+  <section class="orange">
     <div class="custom-container py-5">
       <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
       <div class="col-12 py-4 col-lg-6">
@@ -113,31 +114,31 @@
       <div class="alle-sommer row align-items-start">
         <!--Opskrift 1-->
         <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
-        <div class="col-12 col-sm-4 py-3">
+        <article class="col-12 col-sm-4 py-3">
           <a href="sommer1.html"><img src="img/sommer/sommer1billede1.png" alt="Lilleskål sommeropskrift: Sommersalat med jordbær, burrata og nem focaccia"></a>
           <a href="sommer1.html">
             <h3>Sommersalat med jordbær, burrata og nem focaccia</h3>
           </a>
-        </div>
+        </article>
         <!--Opskrift 2-->
         <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
-        <div class="col-12 col-sm-4 py-3">
+        <article class="col-12 col-sm-4 py-3">
           <a href="sommer2.html"><img src="img/sommer1.png" alt="Lilleskål sommeropskrift: Sommer-tacos med ærtemos og grillede grøntsager"></a>
           <a href="sommer2.html">
             <h3>Sommer-tacos med ærtemos og grillede grøntsager</h3>
           </a>
-        </div>
+        </article>
         <!--Opskrift 3-->
         <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
-        <div class="col-12 col-sm-4 py-3">
+        <article class="col-12 col-sm-4 py-3">
           <a href="sommer3.html"><img src="img/sommer/sommer3billede1.png" alt="Sommerpizza med sæsonens grønt og sprød bund"></a>
           <a href="sommer3.html">
             <h3>Sommerpizza med sæsonens grønt og sprød bund</h3>
           </a>
-        </div>
+        </article>
       </div>
     </div>
-  </div>
+  </section>
 
 
   <!-- ===========================
