--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <div class="hero-sektion position-relative">
     <picture>
       <source media="(min-width: 768px)" srcset="img/forsidebillede.png">
-      <img src="img/forsidemobil.png" alt="">
+      <img src="img/forsidemobil.png" alt="billede af de to kokke i køkkenet, en drikker vin den anden står med en peberkværn, på køkkenet er der pizza de er i gang med at lave">
     </picture>
     <!--Tekst & logo over baggrundsbillede-->
     <!--position-absolute top-0 start 0: placer indholdet i øverste venstre hjørne-->
