--- a/index.html
+++ b/index.html
@@ -86,20 +86,14 @@
     <div
       class="position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-center       align-items-center text-center">
       <img class="logo-forside" src="img/logovandmaling.png" alt="Lilleskål logo">
-      <h4 class="call-to-action"><a href="alleopskrifter.html">
+      <div class="call-to-action"><a href="alleopskrifter.html">
           <picture>
             <source media="(min-width: 768px)" srcset="img/opskriftknapstor.png">
             <img src="img/opskriftknapmobil.png" alt=" Se opskrifter mobil knap">
           </picture>
-        </a></h4>
+        </a></div>
     </div>
   </header>
-
-  <!--UPS!!!!!!!!! der kommer fejlkode ved linje 88:  Empty heading.
-
-From line 88, column 7; to line 88, column 33
-
-"">↩      <h4 class="call-to-action"><a hre-->
   
 
   <!-- ===========================
