--- a/foraar1.html
+++ b/foraar1.html
@@ -262,14 +262,14 @@
       På små skærme (mobil): vis indholdet under hinanden (flex-column)
       Fra små skærme (576px) og op: vis dem ved siden af hinanden (flex-sm-row)-->
   <section class="comment-section custom-container d-flex flex-column flex-md-row  my-5">
-    <form class="comment-form">
+    <div class="comment-form">
       <h2>Har du spørgsmål til opskriften?</h2>
       <p>Har du et spørgsmål til opskriften eller lyst til at sende en hilsen med et tip, så kan du skrive til os i
         kommentarfeltet herunder.</p>
       <input type="text" id="nameInput" placeholder="Dit navn" />
       <textarea id="commentInput" placeholder="Din kommentar"></textarea>
       <button onclick="addComment()">Send</button>
-    </form>
+    </div>
 
     <aside class="comment-list">
       <h2>Kommentarer</h2>
